sumo/tests/traci/MoveNode/InvalidPositionFormat/errors.traci
Answered with error to command 1: Error: unsupported return format requested.
Error while receiving command: tcpip::Socket::receive() @ recv: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
